Update brouter.de links to https

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <dl>
                             <dt data-i18n="credits.brouter">BRouter</dt>
                             <dd data-i18n="[html]credits.brouter-license">
-                                <a target="_blank" href="http://brouter.de/brouter">BRouter</a>
+                                <a target="_blank" href="https://brouter.de/brouter">BRouter</a>
                                 &copy; Arndt Brenschede
                             </dd>
                             <dt data-i18n="credits.map-data">Map data</dt>
@@ -238,7 +238,7 @@
                         <p data-i18n="[html]about.description">
                             Online service of the BRouter routing engine. For the offline Android app and more
                             information see
-                            <a href="http://brouter.de/" target="_blank">brouter.de</a>.
+                            <a href="https://brouter.de/" target="_blank">brouter.de</a>.
                         </p>
                         <p><i data-i18n="about.contact">Contact:</i><br /></p>
 
@@ -280,10 +280,10 @@
                             This is based on
                             <a href="https://www.openstreetmap.org" target="_blank">OpenStreetMap</a>. It is usually
                             updated once a week when a new Planet file is available, see dates of
-                            <a href="http://brouter.de/brouter/segments4/" target="_blank">data files</a>.
+                            <a href="https://brouter.de/brouter/segments4/" target="_blank">data files</a>.
                         </div>
                         <p data-i18n="[html]about.details">
-                            <i><a href="http://brouter.de/privacypolicy.html" target="_blank">Privacy Policy</a></i
+                            <i><a href="https://brouter.de/privacypolicy.html" target="_blank">Privacy Policy</a></i
                             >,
                             <i
                                 ><a href="https://github.com/nrenner/brouter-web#credits-and-licenses" target="_blank"
@@ -670,7 +670,7 @@
                                         <span data-i18n="sidebar.profile.clear">Clear</span>
                                     </button>
                                     <a
-                                        href="http://brouter.de/brouter/costfunctions.html"
+                                        href="https://brouter.de/brouter/costfunctions.html"
                                         target="_blank"
                                         class="btn btn-info btn-sm pull-right"
                                         ><span class="fa fa-question"></span>
