Implementation of Track loading
Use leaflet-filelayer to load kml, gpx, geojson, json tracks and display them as new Overlay layer.

--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
                             <span data-i18n="navbar.load.title">Load</span>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarLoadDropdown">
+                            <div id="navbarLoadTracksContainer">
+                                <a
+                                    class="dropdown-item"
+                                    data-i18n="navbar.load.tracks"
+                                    href="#"
+                                    id="navbarLoadTracks"
+                                    >Tracks</a
+                                >
+                            </div>
                             <a
                                 class="dropdown-item"
                                 data-i18n="navbar.load.nogos"
