--- a/index.html
+++ b/index.html
@@ -82,11 +82,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarLoadDropdown">
                             <div id="navbarLoadTracksContainer">
-                                <a
-                                    class="dropdown-item"
-                                    data-i18n="navbar.load.tracks"
-                                    href="#"
-                                    id="navbarLoadTracks"
+                                <a class="dropdown-item" data-i18n="navbar.load.tracks" href="#" id="navbarLoadTracks"
                                     >Tracks</a
                                 >
                             </div>
