Remove url-search-params for now

--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
             );
         </script>
 
-        <script src="dist/url-search-params.js"></script>
+        <!-- <script src="dist/url-search-params.js"></script> -->
         <script src="config.js"></script>
         <script src="keys.js"></script>
         <script src="dist/layers.js"></script>
