Remove button state "uploading", no longer supported in Bootstrap v4
https://getbootstrap.com/docs/4.3/migration/#buttons
https://getbootstrap.com/docs/3.3/javascript/#buttons-stateful

--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                                 ><span data-i18n="sidebar.customize-profile.title">Customize profile</span>
                             </h1>
                             <form class="flexcolumn flexgrow">
-                                <ul class="nav nav-tabs " id="profileEditorTabs" role="tablist">
+                                <ul class="nav nav-tabs" id="profileEditorTabs" role="tablist">
                                     <li class="nav-item">
                                         <a
                                             class="nav-link active"
@@ -710,12 +710,7 @@
                                         ></textarea>
                                         <div id="profile_message"></div>
                                         <div class="form-group" id="profile_buttons">
-                                            <button
-                                                id="upload"
-                                                type="button"
-                                                class="btn btn-primary btn-sm"
-                                                data-uploading-text="Uploading…"
-                                            >
+                                            <button id="upload" type="button" class="btn btn-primary btn-sm">
                                                 <span class="fa fa-cloud-upload"></span>
                                                 <span data-i18n="sidebar.profile.upload">Upload</span>
                                             </button>
