Set button labels of both save and upload to "Apply"
It's the same action and that the profile is uploaded is an
implementation detail. Apply will also be used for proper profile URL
parameters.

--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                                         <div class="form-group" id="profile_buttons">
                                             <button id="save" type="button" class="btn btn-primary btn-sm">
                                                 <span class="fa fa-cloud-upload"></span>
-                                                <span data-i18n="sidebar.profile.save">Save</span>
+                                                <span data-i18n="sidebar.profile.apply">Apply</span>
                                             </button>
                                         </div>
                                     </div>
@@ -712,7 +712,7 @@
                                         <div class="form-group" id="profile_buttons">
                                             <button id="upload" type="button" class="btn btn-primary btn-sm">
                                                 <span class="fa fa-cloud-upload"></span>
-                                                <span data-i18n="sidebar.profile.upload">Upload</span>
+                                                <span data-i18n="sidebar.profile.apply">Apply</span>
                                             </button>
                                             <button id="clear" type="button" class="btn btn-secondary btn-sm">
                                                 <span class="fa fa-eraser"></span>
