Improve profile parameters layout: button always visible, smaller font
- Flexbox layout with scrolling inner content instead of whole tab
- same smaller font size like in layers tab, small input fields

--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                                 <div class="tab-content flexcolumn flexgrow" id="profileEditorTabsContent">
                                     <div
                                         id="profile_params_container"
-                                        class="tab-pane show active"
+                                        class="flexcolumn flexgrow tab-pane show active"
                                         role="tabpanel"
                                         aria-labelledby="params-tab"
                                     >
