Update about: daily update cycle; add elevation data credits

--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
                                 Search by
                                 <a href="https://wiki.openstreetmap.org/wiki/Nominatim" target="_blank">Nominatim</a>
                             </dd>
+                            <dt data-i18n="credits.elevation-data">Elevation data</dt>
+                            <dd>
+                                <a href="http://srtm.csi.cgiar.org" target="_blank">CGIAR-CSI SRTM</a>
+                            </dd>
                         </dl>
                         <h5 data-i18n="credits.map-tiles">Map tiles</h5>
                         <dl id="credits-maps"></dl>
@@ -281,12 +285,12 @@
                             <i data-i18n="about.data">Data:</i>
                         </p>
 
-                        <div data-i18n="[html]about.data-description">
+                        <p data-i18n="[html]about.data-description">
                             This is based on
                             <a href="https://www.openstreetmap.org" target="_blank">OpenStreetMap</a>. It is usually
-                            updated once a week when a new Planet file is available, see dates of
+                            updated daily, see dates of
                             <a href="https://brouter.de/brouter/segments4/" target="_blank">data files</a>.
-                        </div>
+                        </p>
                         <p data-i18n="[html]about.details">
                             <i><a href="https://brouter.de/privacypolicy.html" target="_blank">Privacy Policy</a></i
                             >,
