Show icon indicator when profile is pinned (modified in editor)

--- a/index.html
+++ b/index.html
@@ -686,6 +686,7 @@
                                             >Profile</a
                                         >
                                     </li>
+                                    <span id="profile-pinned" hidden><i class="fa fa-thumb-tack"></i></span>
                                 </ul>
                                 <div class="tab-content flexcolumn flexgrow" id="profileEditorTabsContent">
                                     <div
