Use non breakable space for stats unit separator

--- a/index.html
+++ b/index.html
@@ -785,8 +785,9 @@
                             Distance
                         </div>
                         <p class="stats-label">
-                            <span id="distance">-</span
-                            ><abbr data-i18n="[title]footer.kilometer;footer.kilometer-abbrev" title="kilometers"
+                            <span id="distance">-</span>&#8239;<abbr
+                                data-i18n="[title]footer.kilometer;footer.kilometer-abbrev"
+                                title="kilometers"
                                 >km</abbr
                             >
                         </p>
@@ -796,26 +797,28 @@
                             Travel time
                         </div>
                         <p class="stats-label">
-                            <span id="totaltime">-</span
-                            ><abbr data-i18n="[title]footer.hours;footer.hours-abbrev" title="hours">h</abbr>
+                            <span id="totaltime">-</span>&#8239;<abbr
+                                data-i18n="[title]footer.hours;footer.hours-abbrev"
+                                title="hours"
+                                >h</abbr
+                            >
                         </p>
                     </li>
                     <li>
                         <div class="text-muted small d-none d-md-block">
-                            <span data-i18n="footer.total-energy">Total Energy</span>
-                            |
-                            <span data-i18n="footer.energy-per-100km">Energy per 100 km</span>
+                            <span data-i18n="footer.total-energy">Total Energy</span>&#8239;|&#8239;<span
+                                data-i18n="footer.energy-per-100km"
+                                >Energy per 100 km</span
+                            >
                         </div>
                         <p class="stats-label">
-                            <span id="totalenergy">-</span
+                            <span id="totalenergy">-</span><span class="d-none d-md-inline">&#8239;</span
                             ><abbr
                                 class="d-none d-md-inline"
                                 data-i18n="[title]footer.kilowatthour;footer.kilowatthour-abbrev"
                                 title="kilowatt hours"
                                 >kWh</abbr
-                            >
-                            | <span id="meanenergy">-</span
-                            ><abbr
+                            >&#8239;|&#8239;<span id="meanenergy">-</span>&#8239;<abbr
                                 data-i18n="[title]footer.kilowatthour;footer.kilowatthour-abbrev"
                                 title="kilowatt hours"
                                 >kWh</abbr
@@ -824,29 +827,33 @@
                     </li>
                     <li>
                         <div class="text-muted small d-none d-md-block">
-                            <span data-i18n="footer.ascend">Ascend</span> |
-                            <span data-i18n="footer.plain-ascend">Plain ascend</span>
+                            <span data-i18n="footer.ascend">Ascend</span>&#8239;|&#8239;<span
+                                data-i18n="footer.plain-ascend"
+                                >Plain ascend</span
+                            >
                         </div>
                         <p class="stats-label">
-                            <span id="ascend">-</span
-                            ><abbr
+                            <span id="ascend">-</span>&#8239;<abbr
                                 class="d-none d-md-inline"
                                 data-i18n="[title]footer.meter;footer.meter-abbrev"
                                 title="meters"
                                 >m</abbr
+                            >&#8239;|&#8239;<span id="plainascend">-</span>&#8239;<abbr
+                                data-i18n="[title]footer.meter;footer.meter-abbrev"
+                                title="meters"
+                                >m</abbr
                             >
-                            | <span id="plainascend">-</span
-                            ><abbr data-i18n="[title]footer.meter;footer.meter-abbrev" title="meters">m</abbr>
                         </p>
                     </li>
                     <li>
                         <div class="text-muted small d-none d-md-block">
-                            <span data-i18n="footer.cost">Cost</span> |
-                            <span data-i18n="footer.mean-cost-factor">Mean cost factor</span>
+                            <span data-i18n="footer.cost">Cost</span>&#8239;|&#8239;<span
+                                data-i18n="footer.mean-cost-factor"
+                                >Mean cost factor</span
+                            >
                         </div>
                         <p class="stats-label">
-                            <span id="cost">-</span> |
-                            <span id="meancostfactor">-</span>
+                            <span id="cost">-</span>&#8239;|&#8239;<span id="meancostfactor">-</span>
                         </p>
                     </li>
                 </ul>
