Make privacy policy URL configurable (#284)

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                             <a href="https://brouter.de/brouter/segments4/" target="_blank">data files</a>.
                         </p>
                         <p data-i18n="[html]about.details">
-                            <i><a href="/privacypolicy.html" target="_blank">Privacy Policy</a></i
+                            <i><a href="{{privacyPolicyUrl}}" target="_blank">Privacy Policy</a></i
                             >,
                             <i
                                 ><a href="https://github.com/nrenner/brouter-web#credits-and-licenses" target="_blank"
