Add shortcut to export route
Press 'X' to trigger the export route dialog.

Automatically populating the trackname field should work too.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                             role="button"
                             aria-haspopup="true"
                             aria-expanded="false"
+                            data-i18n="[title]navbar.export-tooltip"
+                            title="Export route"
                         >
                             <span class="fa fa-lg fa-cloud-download" aria-hidden="true"> </span>
                             <span data-i18n="navbar.export">Export</span>
