Add shortcuts to load tracks and no-go areas
Press 'O' or 'Shift+O' to open/load tracks or no-go areas respectively.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                             id="navbarLoadDropdown"
                             aria-haspopup="true"
                             aria-expanded="false"
+                            data-i18n="[title]navbar.load.tooltip"
+                            title="Load route"
                         >
                             <span class="fa fa-lg fa-cloud-upload" aria-hidden="true"> </span>
                             <span data-i18n="navbar.load.title">Load</span>
